--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#ww_0ec8394aca416 {
+.weatherwidget-io {
     display: block;
     max-width: 100%;
     width: 90% !important;
